fixing the alignment for the items to centre of the page with smaller screens

--- a/css/favorites.css
+++ b/css/favorites.css
@@ -154,6 +154,11 @@ section{
 @media (max-width: 768px) {
     .item-cont {
         grid-template-columns: repeat(1, 1fr); 
+        margin: auto 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
     .fav-item{
         float: left;
@@ -192,6 +197,10 @@ section{
 @media (max-width: 480px) {
     .item-cont {
         grid-template-columns: repeat(1, 1fr); 
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
     .fav-item{
         float: left;
